--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -50,7 +50,7 @@
                 android:shadowDx="10"
                 android:shadowDy="10"
                 android:shadowRadius="10"
-                android:text="APAYDIN\nFITNESS"
+                android:text="AP\nFITNESS"
                 android:textColor="#FFEB3B"
                 android:textSize="48sp"
                 app:layout_constraintEnd_toEndOf="parent"
