--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,20 +13,6 @@
         android:layout_height="match_parent"
         tools:context=".LoginFragment">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:alpha=".5"
-            android:contentDescription="@string/app_name"
-            android:scaleType="centerInside"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/apaydin_fitness_icon"
-            tools:visibility="gone" />
-
         <TextView
             android:id="@+id/textView"
             android:layout_width="0dp"
@@ -37,7 +23,7 @@
             android:rotation="-90"
             android:scaleX="1.5"
             android:scaleY="1.5"
-            android:text="APAYDIN\nFITNESS"
+            android:text="AP FITNESS"
             android:textColor="#73FFEB3B"
             android:textSize="75sp"
             app:layout_constraintBottom_toBottomOf="parent"
